fix: tweak font family and size to improve legibility

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 html {
   line-height: 1.5;
-  font-family: Georgia, serif;
-  font-size: 20px;
+  font-family: Times New Roman, serif;
+  font-size: 15px;
   color: #1a1a1a;
   background-color: #fdfdfd;
 }
